エレメントの表示と出現機能の実装

--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -175,14 +175,19 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Sources\Framework\DirectX11.cpp" />
     <ClCompile Include="Sources\Framework\Game.cpp" />
+    <ClCompile Include="Sources\Framework\RandMt.cpp" />
     <ClCompile Include="Sources\Framework\Window.cpp" />
     <ClCompile Include="Sources\Game\DebugCamera.cpp" />
     <ClCompile Include="Sources\Game\Element.cpp" />
+    <ClCompile Include="Sources\Game\ElementFactory.cpp" />
+    <ClCompile Include="Sources\Game\ElementManager.cpp" />
     <ClCompile Include="Sources\Game\Field.cpp" />
     <ClCompile Include="Sources\Game\FixCamera.cpp" />
     <ClCompile Include="Sources\Game\GridFloor.cpp" />
     <ClCompile Include="Sources\Game\Player.cpp" />
     <ClCompile Include="Sources\Game\MyGame.cpp" />
+    <ClCompile Include="Sources\Game\PlayScene.cpp" />
+    <ClCompile Include="Sources\Game\SceneManager.cpp" />
     <ClCompile Include="Sources\Game\TargetCamera.cpp" />
     <ClCompile Include="Sources\Game\Transform.cpp" />
     <ClCompile Include="Sources\pch\pch.cpp">
@@ -194,16 +199,23 @@
     <ClInclude Include="Sources\Framework\DirectX11.h" />
     <ClInclude Include="Sources\Framework\Game.h" />
     <ClInclude Include="Sources\Framework\NonCopyable.h" />
+    <ClInclude Include="Sources\Framework\RandMt.h" />
     <ClInclude Include="Sources\Framework\StepTimer.h" />
     <ClInclude Include="Sources\Framework\Window.h" />
     <ClInclude Include="Sources\Game\DebugCamera.h" />
     <ClInclude Include="Sources\Game\Element.h" />
+    <ClInclude Include="Sources\Game\ElementFactory.h" />
+    <ClInclude Include="Sources\Game\ElementManager.h" />
     <ClInclude Include="Sources\Game\Field.h" />
     <ClInclude Include="Sources\Game\FixCamera.h" />
     <ClInclude Include="Sources\Game\GridFloor.h" />
     <ClInclude Include="Sources\Game\IObject.h" />
+    <ClInclude Include="Sources\Game\IScene.h" />
+    <ClInclude Include="Sources\Game\ISceneRequest.h" />
     <ClInclude Include="Sources\Game\Player.h" />
     <ClInclude Include="Sources\Game\MyGame.h" />
+    <ClInclude Include="Sources\Game\PlayScene.h" />
+    <ClInclude Include="Sources\Game\SceneManager.h" />
     <ClInclude Include="Sources\Game\TargetCamera.h" />
     <ClInclude Include="Sources\Game\Transform.h" />
     <ClInclude Include="Sources\pch\pch.h" />
