--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -183,11 +183,13 @@
     <ClCompile Include="Sources\Game\ElementFactory.cpp" />
     <ClCompile Include="Sources\Game\ElementManager.cpp" />
     <ClCompile Include="Sources\Game\Field.cpp" />
+    <ClCompile Include="Sources\Game\FireMagicShooter.cpp" />
     <ClCompile Include="Sources\Game\FixCamera.cpp" />
     <ClCompile Include="Sources\Game\GridFloor.cpp" />
     <ClCompile Include="Sources\Game\MagicFactory.cpp" />
     <ClCompile Include="Sources\Game\MagicManager.cpp" />
     <ClCompile Include="Sources\Game\NormalMagic.cpp" />
+    <ClCompile Include="Sources\Game\NormalMagicShooter.cpp" />
     <ClCompile Include="Sources\Game\Player.cpp" />
     <ClCompile Include="Sources\Game\MyGame.cpp" />
     <ClCompile Include="Sources\Game\PlayScene.cpp" />
@@ -208,10 +210,13 @@
     <ClInclude Include="Sources\Framework\StepTimer.h" />
     <ClInclude Include="Sources\Framework\Window.h" />
     <ClInclude Include="Sources\Game\Camera.h" />
+    <ClInclude Include="Sources\Game\FireMagicShooter.h" />
     <ClInclude Include="Sources\Game\IMagic.h" />
+    <ClInclude Include="Sources\Game\IMagicShooter.h" />
     <ClInclude Include="Sources\Game\MagicFactory.h" />
     <ClInclude Include="Sources\Game\MagicManager.h" />
     <ClInclude Include="Sources\Game\NormalMagic.h" />
+    <ClInclude Include="Sources\Game\NormalMagicShooter.h" />
     <ClInclude Include="Sources\Game\SphereCollider.h" />
     <ClInclude Include="Sources\Game\DebugCamera.h" />
     <ClInclude Include="Sources\Game\Element.h" />
