--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="Sources\Framework\Game.cpp" />
     <ClCompile Include="Sources\Framework\RandMt.cpp" />
     <ClCompile Include="Sources\Framework\Window.cpp" />
+    <ClCompile Include="Sources\Game\AICastMagicCommand.cpp" />
     <ClCompile Include="Sources\Game\Camera.cpp" />
     <ClCompile Include="Sources\Game\CastMagicCommand.cpp" />
     <ClCompile Include="Sources\Game\DebugCamera.cpp" />
@@ -211,6 +212,7 @@
     <ClInclude Include="Sources\Framework\RandMt.h" />
     <ClInclude Include="Sources\Framework\StepTimer.h" />
     <ClInclude Include="Sources\Framework\Window.h" />
+    <ClInclude Include="Sources\Game\AICastMagicCommand.h" />
     <ClInclude Include="Sources\Game\Camera.h" />
     <ClInclude Include="Sources\Game\CastMagicCommand.h" />
     <ClInclude Include="Sources\Game\FireMagicShooter.h" />
