--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -189,6 +189,8 @@
     <ClCompile Include="Sources\Game\FireMagic.cpp" />
     <ClCompile Include="Sources\Game\FireMagicShooter.cpp" />
     <ClCompile Include="Sources\Game\FixCamera.cpp" />
+    <ClCompile Include="Sources\Game\FreezeMagic.cpp" />
+    <ClCompile Include="Sources\Game\FreezeMagicShooter.cpp" />
     <ClCompile Include="Sources\Game\GridFloor.cpp" />
     <ClCompile Include="Sources\Game\MagicFactory.cpp" />
     <ClCompile Include="Sources\Game\MagicManager.cpp" />
@@ -201,6 +203,8 @@
     <ClCompile Include="Sources\Game\SceneManager.cpp" />
     <ClCompile Include="Sources\Game\SphereCollider.cpp" />
     <ClCompile Include="Sources\Game\TargetCamera.cpp" />
+    <ClCompile Include="Sources\Game\ThunderMagic.cpp" />
+    <ClCompile Include="Sources\Game\ThunderMagicShooter.cpp" />
     <ClCompile Include="Sources\Game\Transform.cpp" />
     <ClCompile Include="Sources\pch\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -221,6 +225,8 @@
     <ClInclude Include="Sources\Game\FireMagic.h" />
     <ClInclude Include="Sources\Game\FireMagicShooter.h" />
     <ClInclude Include="Sources\Game\Command.h" />
+    <ClInclude Include="Sources\Game\FreezeMagic.h" />
+    <ClInclude Include="Sources\Game\FreezeMagicShooter.h" />
     <ClInclude Include="Sources\Game\IMagic.h" />
     <ClInclude Include="Sources\Game\IMagicShooter.h" />
     <ClInclude Include="Sources\Game\MagicFactory.h" />
@@ -244,6 +250,8 @@
     <ClInclude Include="Sources\Game\PlayScene.h" />
     <ClInclude Include="Sources\Game\SceneManager.h" />
     <ClInclude Include="Sources\Game\TargetCamera.h" />
+    <ClInclude Include="Sources\Game\ThunderMagic.h" />
+    <ClInclude Include="Sources\Game\ThunderMagicShooter.h" />
     <ClInclude Include="Sources\Game\Transform.h" />
     <ClInclude Include="Sources\pch\pch.h" />
   </ItemGroup>
